--- a/contact.html
+++ b/contact.html
@@ -1,10 +1,85 @@
 ---
-layout: default
+layout: default2
+style: photo
 ---
 
 <div class='other-pages'>
+<!--             <section id="header">
+                <div class="inner">
+                    <span class="icon solid major fa-cloud"></span>
+                    <h1>Hi, I'm <strong>Photon</strong>, another fine<br />
+                    little freebie from <a href="http://html5up.net">HTML5 UP</a>.</h1>
+                    <p>Accumsan feugiat mi commodo erat lorem ipsum, sed magna<br />
+                    lobortis feugiat sapien sed etiam volutpat accumsan.</p>
+                    <ul class="actions special">
+                        <li><a href="#one" class="button scrolly">Discover</a></li>
+                    </ul>
+                </div>
+            </section>
+ -->
+        <!-- One -->
+            <section id="one" class="main style1">
+                <div class="container">
+                <div class="row gtr-150"> <h1></h1> </div>
+                    <div class="row gtr-150"> 
+                        <div class="col-8 col-12-medium">
+                            <header class="major">
+                                <br>
+                                <h2>Jinwei Xing (邢津炜)</h2>
+                            </header>
+                            <p>Hi, I'm Jinwei Xing, a second-year PhD student in Department of Cognitive Science, University of California, Irvine. Before that, I received the B.S. degree in Computer Science from Sichuan University. I'm now working with Professor <a href="http://www.socsci.uci.edu/~jkrichma/">Jeff Krichmar </a> and <a href="http://nmi-lab.org/authors/eneftci/"> Emre Neftci</a> on Artificial Intelligence, especially inspired by cognitive neuroscience. </p>
 
-  <br>
+                            <p>I'm interested in implementing higher-level intelligence and AGI is my pursue. I mainly work on it from three perspectives: perception, cognition and decision making. In decision making, I focus on deep reinforcement learning as the solution. As for cognition, I'm most interested the capability of relational learning and reasoning. Besides that, for perception, I believe a disentangled and object oriented decomposed representation is also necessary for AGI.
+                            </p>
+                        </div>
+                        <div class="col-4 col-12-medium">
+                            <br>
+                            <br>
+                            <span class="image fit">
+                                <img src="assets/images/me.jpg" width="60%" alt="" />
+                            </span>
+                        </div>
+                    </div>
+                </div>
+            </section>
 
-	<p>This is Jinwei Xing! I'm currently a PhD student in University of California, Irvine, interested in bio-inspired Artificial Intelligence</p>
+        <!-- Two -->
+            <section id="two" class="main style2">
+                <div class="row gtr-150"> <h1> &nbsp; &nbsp;  Publications </h1> </div>
+                <div id="pub1" class="container">
+                    <div class="row gtr-150">
+                        <div class="col-6 col-12-medium">
+                            <span class="image fit">
+                                <img src="assets/images/ModulatedPatience.png" alt="" />
+                            </span>
+                        </div>
+                        <div class="col-6 col-12-medium">
+                                <br>
+                                <h3>Neuromodulated Patience for Robot and Self-Driving Vehicle Navigation</h3>
+                                <p>Jinwei Xing, Xinyun Zou, Jeffrey L Krichmar</p>
+                                <p>IJCNN 2020 <a href="https://arxiv.org/abs/1909.06533">[Arxiv Paper]</a></p>
+                        </div>
+                    </div>
+                </div>
+                <br>
+                <br>
+                <div id="pub2" class="container">
+                    <div class="row gtr-150">
+                        <div class="col-6 col-12-medium">
+                            <span class="image fit">
+                                <img src="assets/images/carlsim4.png" alt="" />
+                            </span>
+                        </div>
+                        <div class="col-6 col-12-medium">
+                                <h3>CARLsim 4: an open source library for large scale, biologically detailed spiking neural network simulation using heterogeneous clusters</h3>
+                                <p>Ting-Shuo Chou, Hirak J Kashyap, Jinwei Xing, Stanislav Listopad, Emily L Rounds, Michael Beyeler, Nikil Dutt, Jeffrey L Krichmar</p>
+                                <p>IJCNN 2018  <a https://ieeexplore.ieee.org/abstract/document/8489326">[Paper]</a> <a href="https://github.com/UCI-CARL/CARLsim4">[Code]</a></p>
+                        </div>
+                    </div>
+                </div>
+
+            </section>
+
+
+
 </div>
