--- a/archive.html
+++ b/archive.html
@@ -15,7 +15,7 @@ label: 0
   {% endfor %}
   </ul>
     <hr>
-      <h3> Investment </h3>
+      <h3> Other </h3>
   <ul>
   {% for post in items_grouped[0].items %}
     <li>
