--- a/contact.html
+++ b/contact.html
@@ -27,9 +27,9 @@ style: photo
                                 <br>
                                 <h2>Jinwei Xing (邢津炜)</h2>
                             </header>
-                            <p>Hi, I'm Jinwei Xing, a second-year PhD student in Department of Cognitive Science, University of California, Irvine. Before that, I received the B.S. degree in Computer Science from Sichuan University. I'm now working with Professor <a href="http://www.socsci.uci.edu/~jkrichma/">Jeff Krichmar </a> and <a href="http://nmi-lab.org/authors/eneftci/"> Emre Neftci</a> on Artificial Intelligence, especially inspired by cognitive neuroscience. </p>
+                            <p>Hi, I'm Jinwei Xing, a second-year PhD student in Department of Cognitive Science, University of California, Irvine. Before that, I received the B.S. degree in Computer Science from Sichuan University. I'm now working with Professor <a href="http://www.socsci.uci.edu/~jkrichma/">Jeff Krichmar </a> and Professor <a href="http://nmi-lab.org/authors/eneftci/"> Emre Neftci</a> on Artificial Intelligence, especially inspired by cognitive neuroscience. </p>
 
-                            <p>I'm interested in implementing higher-level intelligence and AGI is my pursue. I mainly work on it from three perspectives: perception, cognition and decision making. In decision making, I focus on deep reinforcement learning as the solution. As for cognition, I'm most interested the capability of relational learning and reasoning. Besides that, for perception, I believe a disentangled and object oriented decomposed representation is also necessary for AGI.
+                            <p>I'm interested in implementing higher-level intelligence and AGI is my pursue. I mainly think about it from three perspectives: perception, higher cognitive capabilities and decision making. In decision making, I focus on deep reinforcement learning as the solution. As for higher cognitive capabilities, I'm most interested in the capability of relational learning and reasoning. Besides that, for perception, I also believe a structuerd representation is necessary for AGI and thus looks into disentangled representation and object-oriented scene decomposition.
                             </p>
                         </div>
                         <div class="col-4 col-12-medium">
@@ -57,7 +57,7 @@ style: photo
                                 <br>
                                 <h3>Neuromodulated Patience for Robot and Self-Driving Vehicle Navigation</h3>
                                 <p>Jinwei Xing, Xinyun Zou, Jeffrey L Krichmar</p>
-                                <p>IJCNN 2020 <a href="https://arxiv.org/abs/1909.06533">[Arxiv Paper]</a></p>
+                                <p>IJCNN 2020  &nbsp; <a href="https://arxiv.org/abs/1909.06533">[Arxiv Paper]</a> &nbsp; <a href="https://www.youtube.com/watch?v=DixOxO2UafQ">[Video]</a></p>
                         </div>
                     </div>
                 </div>
@@ -73,7 +73,7 @@ style: photo
                         <div class="col-6 col-12-medium">
                                 <h3>CARLsim 4: an open source library for large scale, biologically detailed spiking neural network simulation using heterogeneous clusters</h3>
                                 <p>Ting-Shuo Chou, Hirak J Kashyap, Jinwei Xing, Stanislav Listopad, Emily L Rounds, Michael Beyeler, Nikil Dutt, Jeffrey L Krichmar</p>
-                                <p>IJCNN 2018  <a https://ieeexplore.ieee.org/abstract/document/8489326">[Paper]</a> <a href="https://github.com/UCI-CARL/CARLsim4">[Code]</a></p>
+                                <p>IJCNN 2018  &nbsp; <a https://ieeexplore.ieee.org/abstract/document/8489326">[Paper]</a> &nbsp; <a href="https://github.com/UCI-CARL/CARLsim4">[Code]</a></p>
                         </div>
                     </div>
                 </div>
