update personal info

--- a/contact.html
+++ b/contact.html
@@ -27,10 +27,7 @@ style: photo
                                 <br>
                                 <h2>Jinwei Xing (邢津炜)</h2>
                             </header>
-                            <p>Hi, I'm Jinwei Xing, a second-year PhD student in Department of Cognitive Science, University of California, Irvine. Before that, I received the B.S. degree in Computer Science from Sichuan University. I'm now working with Professor <a href="http://www.socsci.uci.edu/~jkrichma/">Jeff Krichmar </a> and Professor <a href="http://nmi-lab.org/authors/eneftci/"> Emre Neftci</a> on Artificial Intelligence, especially inspired by cognitive neuroscience. </p>
-
-                            <p>I'm interested in implementing higher-level intelligence and AGI is my pursue. I mainly think about it from three perspectives: perception, higher cognitive capabilities and decision making. In decision making, I focus on deep reinforcement learning as the solution. As for higher cognitive capabilities, I'm most interested in the capability of relational learning and reasoning. Besides that, for perception, I also believe a structuerd representation is necessary for AGI and thus looks into disentangled representation and object-oriented scene decomposition.
-                            </p>
+                            <p>Hi, I'm Jinwei Xing, a third-year PhD student in Department of Cognitive Science, University of California, Irvine. Before that, I received the B.S. degree in Computer Science from Sichuan University. I'm now working with Professor <a href="http://www.socsci.uci.edu/~jkrichma/">Jeff Krichmar </a> and Professor <a href="http://nmi-lab.org/authors/eneftci/"> Emre Neftci</a> on reinforcement learning and robotics. </p>
                         </div>
                         <div class="col-4 col-12-medium">
                             <br>
@@ -46,18 +43,34 @@ style: photo
         <!-- Two -->
             <section id="two" class="main style2">
                 <div class="row gtr-150"> <h1> &nbsp; &nbsp;  Publications </h1> </div>
+                <div id="prepub1" class="container">
+                    <div class="row gtr-150">
+                        <div class="col-6 col-12-medium">
+                            <span class="image fit">
+                                <img src="assets/images/lusr.png" alt="" />
+                            </span>
+                        </div>
+                        <div class="col-6 col-12-medium">
+                                <h3>Domain Adaptation In Reinforcement Learning Via Latent Unified State Representation</h3>
+                                <p><em>Jinwei Xing</em>, Takashi Nagata, Xinyun Zou, Emre Neftci, Jeffrey L Krichmar</p>
+                                <p>In submission  &nbsp; </a> &nbsp; <a href="https://www.youtube.com/watch?v=hhsfDrfMyxs">[Video]</a></p>
+                        </div>
+                    </div>
+                </div>
+                <br>
+                <br>
                 <div id="pub1" class="container">
                     <div class="row gtr-150">
                         <div class="col-6 col-12-medium">
                             <span class="image fit">
-                                <img src="assets/images/ModulatedPatience.png" alt="" />
+                                <img src="assets/images/neurorobots.jpg" alt="" />
                             </span>
                         </div>
                         <div class="col-6 col-12-medium">
                                 <br>
-                                <h3>Neuromodulated Patience for Robot and Self-Driving Vehicle Navigation</h3>
-                                <p>Jinwei Xing, Xinyun Zou, Jeffrey L Krichmar</p>
-                                <p>IJCNN 2020  &nbsp; <a href="https://arxiv.org/abs/1909.06533">[Arxiv Paper]</a> &nbsp; <a href="https://www.youtube.com/watch?v=DixOxO2UafQ">[Video]</a></p>
+                                <h3>Neurorobots as a Means Toward Neuroethology and Explainable AI</h3>
+                                <p>Stewart, Kenneth, Kexin Chen, Tiffany Hwu, Hirak J. Kashyap, Jeffrey L. Krichmar, <em>Jinwei Xing</em>, and Xinyun Zou</p>
+                                <p>Frontiers in Neurorobotics 2020 </p>
                         </div>
                     </div>
                 </div>
@@ -67,12 +80,29 @@ style: photo
                     <div class="row gtr-150">
                         <div class="col-6 col-12-medium">
                             <span class="image fit">
+                                <img src="assets/images/ModulatedPatience.png" alt="" />
+                            </span>
+                        </div>
+                        <div class="col-6 col-12-medium">
+                                <br>
+                                <h3>Neuromodulated Patience for Robot and Self-Driving Vehicle Navigation</h3>
+                                <p><em>Jinwei Xing</em>, Xinyun Zou, Jeffrey L Krichmar</p>
+                                <p>IJCNN 2020  &nbsp; <a href="https://arxiv.org/abs/1909.06533">[Arxiv Paper]</a> &nbsp; <a href="https://www.youtube.com/watch?v=DixOxO2UafQ">[Video]</a></p>
+                        </div>
+                    </div>
+                </div>
+                <br>
+                <br>
+                <div id="pub3" class="container">
+                    <div class="row gtr-150">
+                        <div class="col-6 col-12-medium">
+                            <span class="image fit">
                                 <img src="assets/images/carlsim4.png" alt="" />
                             </span>
                         </div>
                         <div class="col-6 col-12-medium">
                                 <h3>CARLsim 4: an open source library for large scale, biologically detailed spiking neural network simulation using heterogeneous clusters</h3>
-                                <p>Ting-Shuo Chou, Hirak J Kashyap, Jinwei Xing, Stanislav Listopad, Emily L Rounds, Michael Beyeler, Nikil Dutt, Jeffrey L Krichmar</p>
+                                <p>Ting-Shuo Chou, Hirak J Kashyap, <em> Jinwei Xing </em>, Stanislav Listopad, Emily L Rounds, Michael Beyeler, Nikil Dutt, Jeffrey L Krichmar</p>
                                 <p>IJCNN 2018  &nbsp; <a https://ieeexplore.ieee.org/abstract/document/8489326">[Paper]</a> &nbsp; <a href="https://github.com/UCI-CARL/CARLsim4">[Code]</a></p>
                         </div>
                     </div>
