--- a/contact.html
+++ b/contact.html
@@ -27,7 +27,7 @@ style: photo
                                 <br>
                                 <h2>Jinwei Xing (邢津炜)</h2>
                             </header>
-                            <p>Hi, I'm Jinwei Xing, a third-year PhD student in Department of Cognitive Science, University of California, Irvine. Before that, I received the B.S. degree in Computer Science from Sichuan University. I'm now working with Professor <a href="http://www.socsci.uci.edu/~jkrichma/">Jeff Krichmar </a> and Professor <a href="http://nmi-lab.org/authors/eneftci/"> Emre Neftci</a> on reinforcement learning and robotics. </p>
+                            <p>Hi, I'm Jinwei Xing, a third-year PhD student in Department of Cognitive Science, University of California, Irvine. Before that, I received the B.S. degree in Computer Science from Sichuan University. I'm now working with Prof. <a href="http://www.socsci.uci.edu/~jkrichma/">Jeff Krichmar </a> and Prof. <a href="http://nmi-lab.org/authors/eneftci/"> Emre Neftci</a> on reinforcement learning and robotics. </p>
                         </div>
                         <div class="col-4 col-12-medium">
                             <br>
@@ -53,7 +53,7 @@ style: photo
                         <div class="col-6 col-12-medium">
                                 <h3>Domain Adaptation In Reinforcement Learning Via Latent Unified State Representation</h3>
                                 <p><em>Jinwei Xing</em>, Takashi Nagata, Xinyun Zou, Emre Neftci, Jeffrey L Krichmar</p>
-                                <p>In submission  &nbsp; </a> &nbsp; <a href="https://www.youtube.com/watch?v=hhsfDrfMyxs">[Video]</a></p>
+                                <p>AAAI 2021  &nbsp; </a> &nbsp; <a href="https://www.youtube.com/watch?v=hhsfDrfMyxs">[Video]</a></p>
                         </div>
                     </div>
                 </div>
@@ -87,7 +87,7 @@ style: photo
                                 <br>
                                 <h3>Neuromodulated Patience for Robot and Self-Driving Vehicle Navigation</h3>
                                 <p><em>Jinwei Xing</em>, Xinyun Zou, Jeffrey L Krichmar</p>
-                                <p>IJCNN 2020  &nbsp; <a href="https://arxiv.org/abs/1909.06533">[Arxiv Paper]</a> &nbsp; <a href="https://www.youtube.com/watch?v=DixOxO2UafQ">[Video]</a></p>
+                                <p>IJCNN 2020  &nbsp; <a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=9206642">[Paper]</a> &nbsp; <a href="https://www.youtube.com/watch?v=DixOxO2UafQ">[Video]</a></p>
                         </div>
                     </div>
                 </div>
