--- a/contact.html
+++ b/contact.html
@@ -53,7 +53,7 @@ style: photo
                         <div class="col-6 col-12-medium">
                                 <h3>Domain Adaptation In Reinforcement Learning Via Latent Unified State Representation</h3>
                                 <p><em>Jinwei Xing</em>, Takashi Nagata, Xinyun Zou, Emre Neftci, Jeffrey L Krichmar</p>
-                                <p>AAAI 2021  &nbsp; </a> &nbsp; <a href="https://www.youtube.com/watch?v=hhsfDrfMyxs">[Video]</a></p>
+                                <p>AAAI 2021 &nbsp; <a href="https://www.youtube.com/watch?v=hhsfDrfMyxs">[Video]</a> &nbsp; <a href="https://sites.google.com/view/lusr/">[Project]</a></p>  
                         </div>
                     </div>
                 </div>
